<resources>
    <string name="app_name">NoteApp</string>
    <string name="welcome_back">Welcome\nback</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup"><font fgcolor="#6C7E8E">Don’t have an account?</font> <font fgcolor="#7885FF">Sign up</font></string>
    <string name="signin"><font fgcolor="#6C7E8E">Account created?</font> <font fgcolor="#7885FF">Sign in</font></string>
    <string name="create_naccount">Create\naccount</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="all_notes">All Notes</string>
    <string name="content">There are many apps in Android that can run or emulate other operating systems, via utilizing hardware support for platform...</string>
    <string name="youtube_script_ideas">✍️ Youtube script ideas</string>
    <string name="no_notes_found">No notes found</string>
    <string name="add_notes">Add notes</string>
    <string name="title">Title</string>
    <string name="your_notes_here">Your notes here...</string>
    <string name="save">Save</string>
    <string name="date">This is the date. This is the date.</string>
    <string name="delete">Delete</string>
    <string name="when_you_add_a_notes_you_will_see_n_your_notes_here">When you add a notes. You will see\n your notes here</string>
    <string name="add_button">Add Button</string>
    <string name="email">Email</string>
    <string name="icon">Icon</string>
</resources>